--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
+
 .App {
-  text-align: center;
+  padding:4rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,16 +11,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -36,3 +24,5 @@
     transform: rotate(360deg);
   }
 }
+
+
